# nota

./: README.md  docker-compose.yaml
app/: Dockerfile  auth.py  database.py  init.sql  main.py  models.py  pyproject.toml  requirements.txt  schemas.py
app/api/: auth.py  projects.py  roles.py  teams.py  users.py
